Release Notes

* 11/11/2015
  * fixed AtlasPTB for missing nuclei in RW

* 11/10/2015
  * changed prod/anal prokerages to use max/minrss

* 11/9/2015
  * changed JG to avoid passing parallelOutMap to TB

* 11/6/2015
  * removed T1 constraint for ES job brokerage
  * changed AtlasPTB to use confgurator tables
  * using jobseed=std by default
  * changed AtlasPTB to take size of expired secondaries into account

* 11/5/2015
  * changed jobseed=all when switchEStoNormal is not used

* 11/4/2015
  * changed JG to remove job parameters for empty streams

* 11/2/2015
  * giving a smaller weight to tape for analy

* 10/27/2015
  * tweaked freezeDataset to avoid a rucio bug
  * fixed setCloudToTask to respect distributed datasets

* 10/26/2015
  * fixed for internal merge + zero suppression
  * added checkDuplication
  * avoiding duplication for non-zero RAM chunk

* 10/22/2015
  * changed insertFiles to separate FID retrieval
  * changed AtlasPJB to cap based on nActivated+nStarting when data is available

* 10/21/2015
  * changed getScoutJobData to ignore jobs with nEvents<10
  * using bulk insert in insertFiles
  * fixed slow insertFiles due to givenFiles

* 10/20/2015
  * fixed getMaxAtom for pmerge to use getNum*PerMergeJob
  * added allowNoOutput

* 10/19/2015
  * changed AtlasTPP to set lifetime to transient datasets

* 10/16/2015
  * fixed resetUnused to take ramcount into account

* 10/14/2015
  * added dynamicNumEvents stuff
  * added maxNumEventRanges

* 10/12/2015
  * added dynamic nQueueLimit
  * added timeoutForPendingVoLabel

* 10/8/2015
  * ignoring TEST when converting token to RSE

* 10/7/2015
  * added a margin to the multiplier of disk count estimation for pmerge
  * fixed CF for nEventsPerRange

* 10/6/2015
  * changed JG to release the lock as soon as tasks are taken when nQueued<nQueueLimit
  * fixed lackOfJobs

* 10/2/2015
  * fixed JG to reset destinationDBlock when the site doesn't have endpoint for ddd:	